--- a/Projeto - geracao de fotos/package.json
+++ b/Projeto - geracao de fotos/package.json
@@ -26,7 +26,6 @@
     "node-fetch": "^3.3.2"
   },
   "devDependencies": {
-    "electron": "^28.1.0",
-    "electron-builder": "^24.15.1"
+    "electron": "^28.1.0"
   }
 }
